rancher.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-deployment
  labels:
    app: rancher
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: rancher
  template:
    metadata:
      labels:
        app: rancher
    spec:
      containers:
      - name: rancher
        image: rancher/server:stable
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
          periodSeconds: 60
          timeoutSeconds: 60
          successThreshold: 1
          failureThreshold: 10
        imagePullPolicy: Always
        volumeMounts:
        - name: rancher-persistent-data-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: rancher-persistent-data-storage
        gcePersistentDisk:
          pdName: rancher-data-disk
          fsType: ext4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
---
apiVersion: v1
kind: Service
metadata:
  name: rancher-service
  labels:
    app: rancher
spec:
  selector:
    app: rancher
  ports:
  - name: rancher-http
    protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
