unifi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-deployment
  labels:
    app: unifi
spec:
  replicas: 1
  selector:
    matchLabels:
        app: unifi
  template:
    metadata:
      labels:
        app: unifi
    spec:
      containers:
        - name: unifi
          image: goofball222/unifi:release-5.7.20
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 3478
              protocol: UDP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 6789
              protocol: TCP
          volumeMounts:
            - name: unifi-4lambda-io-cert-storage
              mountPath: /usr/lib/unifi/cert
              readOnly: false
            - name: unifi-persistent-data-storage
              mountPath: /usr/lib/unifi/data
            - name: unifi-persistent-logs-storage
              mountPath: /usr/lib/unifi/logs
          imagePullPolicy: Always
      restartPolicy: Always
      volumes:
        - name: unifi-4lambda-io-cert-storage
          secret:
            secretName: unifi-4lambda-io-crt
            defaultMode: 448
            items:
              - key: tls.crt
                path: fullchain.pem
                mode: 420
              - key: tls.key
                path: privkey.pem
                mode: 256
        - name: unifi-persistent-data-storage
          gcePersistentDisk:
            pdName: unifi-data-disk
            fsType: ext4
        - name: unifi-persistent-logs-storage
          gcePersistentDisk:
            pdName: unifi-log-disk
            fsType: ext4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-tcp-service
spec:
  selector:
    app: unifi
  ports:
    - name: unifi-device-inform
      protocol: TCP
      port: 8080
    - name: unifi-remote-management
      protocol: TCP
      port: 443
      targetPort: 8443
    - name: unifi-speed-test
      protocol: TCP
      port: 6789
  type: LoadBalancer
  loadBalancerIP: 146.148.43.232
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-udp-service
spec:
  selector:
    app: unifi
  ports:    
    - name: unifi-stun
      protocol: UDP
      port: 3478
  type: LoadBalancer
  loadBalancerIP: 146.148.43.232
