web-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
  - name: web-http
    protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
