web-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: services
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
  - name: web-http
    protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
