ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: primary-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ip-usc
    ingress.gcp.kubernetes.io/pre-shared-cert: www-4lambda-io
spec:
  backend:
    serviceName: web-service
    servicePort: 80
  rules:
  - host: www.4lambda.io
    http:
      paths:
      - backend:
          serviceName: web-service
          servicePort: 80
        path: /
